# MasterRepoV001

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  GITHUB_COPILOT_IMPLEMENTATION_DIRECTIONS.md  NOVAFORGE_ROLLUP_INDEX.md  NovaForge.sln  README.md  REPO_RESET_ENDGAME_BRIEF.md  build.cmd  vcpkg.json
Source/Animation/: CMakeLists.txt
Source/Animation/BlendTree/: BlendNode.cpp  BlendNode.h
Source/Animation/IK/: IKSolver.cpp  IKSolver.h
Source/Animation/Skeleton/: Skeleton.cpp  Skeleton.h
Source/Animation/StateMachine/: AnimStateMachine.cpp  AnimStateMachine.h
Source/Audio/: CMakeLists.txt
Source/Audio/Core/: AudioDevice.cpp  AudioDevice.h  SoundAsset.h  SoundBank.cpp  SoundBank.h
Source/Audio/Mixer/: AudioMixer.cpp  AudioMixer.h
Source/Audio/Spatial/: SpatialAudio.cpp  SpatialAudio.h
Source/Core/: CMakeLists.txt
Source/Core/Config/: ConfigSystem.cpp  ConfigSystem.h  ProjectManifest.cpp  ProjectManifest.h
Source/Core/Events/: EventBus.cpp  EventBus.h
Source/Core/Logging/: Log.cpp  Log.h
Source/Core/Math/: Matrix.h  Quaternion.h  Vector.h
Source/Core/Memory/: Allocator.cpp  Allocator.h
Source/Core/Paths/: ProjectPathService.cpp  ProjectPathService.h
Source/Core/Platform/: Platform.cpp  Platform.h
Source/Core/Reflection/: TypeInfo.cpp  TypeInfo.h
Source/Core/Serialization/: Archive.cpp  Archive.h
Source/Core/Threading/: TaskSystem.cpp  TaskSystem.h
Source/Editor/: CMakeLists.txt
Source/Editor/Application/: ContextToolShelf.cpp  ContextToolShelf.h  EditorApp.cpp  EditorApp.h  EditorInputState.h  EditorModeManager.cpp  EditorModeManager.h  EditorWorldSession.cpp  EditorWorldSession.h  InputBindingMap.h
Source/Editor/Commands/: EditorCommand.cpp  EditorCommand.h  EditorCommandRegistry.cpp  EditorCommandRegistry.h  EditorHotkeyMap.cpp  EditorHotkeyMap.h  VoxelEditCommands.h
Source/Editor/Inspector/: PropertyInspectorSystem.cpp  PropertyInspectorSystem.h
Source/Editor/Panels/: ConsolePanel.cpp  ConsolePanel.h  ContentBrowser.cpp  ContentBrowser.h  DockingSystem.cpp  DockingSystem.h  EconomyPanel.cpp  EconomyPanel.h  EditorTheme.cpp  EditorTheme.h  EditorToolbar.cpp  EditorToolbar.h  FactionPanel.cpp  FactionPanel.h  HUDPanel.cpp  HUDPanel.h  Inspector.cpp  Inspector.h  InventoryPanel.cpp  InventoryPanel.h  LiveProfilerBackend.cpp  LiveProfilerBackend.h  LiveProfilerPanel.cpp  LiveProfilerPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MenuBarPanel.cpp  MenuBarPanel.h  PreferencesPanel.cpp  PreferencesPanel.h  SceneOutliner.cpp  SceneOutliner.h  SolarSystemPanel.cpp  SolarSystemPanel.h  StatusBarPanel.cpp  StatusBarPanel.h  VoxelInspector.cpp  VoxelInspector.h  WorldDebugPanel.cpp  WorldDebugPanel.h  (+1 more)
Source/Editor/Selection/: SelectionService.cpp  SelectionService.h
Source/Editor/Tools/: EditorToolContext.h  VoxelPickService.cpp  VoxelPickService.h
Source/Editor/Viewport/: EditorViewport.cpp  EditorViewport.h  EditorViewportNF.h  TransformGizmo.cpp  TransformGizmo.h
Source/Engine/: CMakeLists.txt
Source/Engine/AI/: AIAgent.h  AISystem.cpp  AISystem.h  BehaviorTree.cpp  BehaviorTree.h  Blackboard.h  FactionManager.h  UtilitySelector.h
Source/Engine/Application/: EngineLoop.cpp  EngineLoop.h
Source/Engine/Assets/: AssetManager.cpp  AssetManager.h
Source/Engine/ECS/: Component.h  Entity.h  World.cpp  World.h
Source/Engine/NodeGraph/: CMakeLists.txt  GraphVM.cpp  GraphVM.h
Source/Engine/World/: Level.cpp  Level.h
Source/Game/: CMakeLists.txt
Source/Game/App/: Bootstrap.cpp  Bootstrap.h  Diagnostics.cpp  Diagnostics.h  Orchestrator.cpp  Orchestrator.h  Playtest.cpp  Playtest.h  ProjectContext.cpp  ProjectContext.h  Session.cpp  Session.h
Source/Game/Character/: CharacterDef.h  CharacterMeshBuilder.cpp  CharacterMeshBuilder.h  PlayerCharacterRenderer.cpp  PlayerCharacterRenderer.h
Source/Game/Components/: PositionComponent.h
Source/Game/Interaction/: InteractionLoop.cpp  InteractionLoop.h  Inventory.cpp  Inventory.h  MiningTool.cpp  MiningTool.h  ResourceItem.h  RigState.cpp  RigState.h
Source/Game/Movement/: PlayerMovement.cpp  PlayerMovement.h
Source/Game/Net/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  NetReplicator.cpp  NetReplicator.h
Source/Game/Voxel/: Chunk.h  ChunkCoord.h  ChunkMap.cpp  ChunkMap.h  ChunkMeshCache.cpp  ChunkMeshCache.h  ChunkStreamer.cpp  ChunkStreamer.h  VoxelDebugOverlay.cpp  VoxelDebugOverlay.h  VoxelEditApi.cpp  VoxelEditApi.h  VoxelMesher.cpp  VoxelMesher.h  VoxelSerializer.cpp  VoxelSerializer.h  VoxelType.h
Source/Game/World/: DevWorldConfig.cpp  DevWorldConfig.h  DevWorldSerializer.cpp  DevWorldSerializer.h  GameWorld.cpp  GameWorld.h  WorldDebugOverlay.cpp  WorldDebugOverlay.h  WorldFileService.cpp  WorldFileService.h  WorldSaveLoad.cpp  WorldSaveLoad.h
Source/Input/: CMakeLists.txt
Source/Input/Actions/: InputAction.cpp  InputAction.h
Source/Input/Devices/: Gamepad.cpp  Gamepad.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Source/Networking/: CMakeLists.txt
Source/Networking/Channel/: NetChannel.cpp  NetChannel.h
Source/Networking/HTTP/: HttpClient.cpp  HttpClient.h
Source/Networking/Protocol/: NetMessage.cpp  NetMessage.h
Source/Physics/: CMakeLists.txt
Source/Programs/: CMakeLists.txt
Source/Renderer/: CMakeLists.txt
Source/UI/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Animation/: AnimationTests.cpp
Tests/Audio/: AudioTests.cpp
Tests/Bootstrap/: BootstrapSmokeTests.cpp
Tests/ChunkStreaming/: ChunkStreamingTests.cpp
Tests/Core/: CoreSystemTests.cpp  LogTests.cpp  MathTests.cpp
Tests/DevWorld/: DevWorldTests.cpp
Tests/Economy/: EconomyTests.cpp
Tests/Engine/: AISystemTests.cpp  BehaviorTreeTests.cpp  ECSTests.cpp  NodeGraphTests.cpp
Tests/Gameplay/: GameplayTests.cpp
Tests/Input/: GamepadTests.cpp
Tests/Interaction/: InteractionTests.cpp
Tests/Movement/: MovementTests.cpp
Tests/Multiplayer/: MultiplayerTests.cpp
Tests/Physics/: PhysicsTests.cpp
Tests/SolarSystem/: SolarSystemTests.cpp
Tests/Voxel/: PCGWorldGenTests.cpp  VoxelTests.cpp
Tests/VoxelMesh/: VoxelMeshTests.cpp
(+176 files in other folders)
